<resources>
    <string name="app_name">Retro Shooter</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="exit">exit</string>
    <string name="Exit">Exit</string>
    <string name="leaderboard">leaderboard</string>
    <string name="Leaderboard">LeaderBoard</string>
    <string name="points">Points:</string>
    <string name="restart">Restart</string>
    <string name="Restart">restart</string>
    <string name="gameover">gameover</string>
    <string name="home">home</string>
    <string name="your_score">Your Score:</string>
    <string name="start_game">Start Game</string>
</resources>