<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:fontFamily="@font/retropix"
            android:contentDescription="@string/Restart"
            android:onClick="restart"  />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exit"
            android:fontFamily="@font/retropix"
            android:contentDescription="@string/exit"
            android:onClick="exit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="693dp"
        android:layout_height="289dp"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="555dp"
            android:layout_height="85dp"
            app:srcCompat="@drawable/gameover" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/retropix"
            android:text="@string/points"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/retropix"
            android:text="High Score: "
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvYourScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/retropix"
            android:text="Your Score: "
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/leaderboard"
            android:fontFamily="@font/retropix"
            android:onClick="showLeaderboard"
            android:text="@string/Leaderboard" />

    </LinearLayout>

</LinearLayout>